parameter of db query support type setting.
